syntax = "proto3";

package kotlinx.rpc.grpc.test;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  optional uint32 timeout = 2;
}


// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}
